doc: Improve troubleshooting information